--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://creative-tim.com">
+                <a href="http://stratuscoder.com">
                      <div class="logo-container">
                         <div class="logo">
                             <img src="assets/img/new_logo.png">
                         </div>
                         <div class="brand">
-                            Creative Tim
+                            Stratuscoder Inc
                         </div>
                     </div>
                 </a>
@@ -50,7 +50,7 @@
               <ul class="nav navbar-nav navbar-right">
                     <li><a href="components.html">Components</a></li>
                     
-                    <li><a href="http://www.creative-tim.com/product/get-shit-done-kit" class="btn btn-round btn-default">Download</a></li>
+                    <li><a href="http://stratuscoder.com" class="btn btn-round btn-default">Download</a></li>
                </ul>
               
             </div><!-- /.navbar-collapse -->
